; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_simple.c_merge_simple_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_simple.c_merge_simple_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@GIT_MERGE_OPTIONS_INIT = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@GIT_CHECKOUT_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@THEIRS_SIMPLE_OID = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@GIT_CHECKOUT_SAFE = common dso_local global i32 0, align 4
@GIT_CHECKOUT_ALLOW_CONFLICTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @merge_simple_branch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @merge_simple_branch(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [1 x i32], align 4
  %6 = alloca [1 x i32*], align 8
  %7 = alloca %struct.TYPE_7__, align 4
  %8 = alloca %struct.TYPE_8__, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = bitcast %struct.TYPE_7__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.TYPE_7__* @GIT_MERGE_OPTIONS_INIT to i8*), i64 4, i1 false)
  %10 = bitcast %struct.TYPE_8__* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %10, i8* align 4 bitcast (%struct.TYPE_8__* @GIT_CHECKOUT_OPTIONS_INIT to i8*), i64 4, i1 false)
  %11 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %12 = load i32, i32* @THEIRS_SIMPLE_OID, align 4
  %13 = call i32 @git_oid_fromstr(i32* %11, i32 %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = getelementptr inbounds [1 x i32*], [1 x i32*]* %6, i64 0, i64 0
  %16 = load i32, i32* @repo, align 4
  %17 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %18 = call i32 @git_annotated_commit_lookup(i32** %15, i32 %16, i32* %17)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load i32, i32* %3, align 4
  %21 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  store i32 %20, i32* %21, align 4
  %22 = load i32, i32* @GIT_CHECKOUT_SAFE, align 4
  %23 = load i32, i32* @GIT_CHECKOUT_ALLOW_CONFLICTS, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* %4, align 4
  %26 = or i32 %24, %25
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* @repo, align 4
  %29 = getelementptr inbounds [1 x i32*], [1 x i32*]* %6, i64 0, i64 0
  %30 = call i32 @git_merge(i32 %28, i32** %29, i32 1, %struct.TYPE_7__* %7, %struct.TYPE_8__* %8)
  %31 = call i32 @cl_git_pass(i32 %30)
  %32 = getelementptr inbounds [1 x i32*], [1 x i32*]* %6, i64 0, i64 0
  %33 = load i32*, i32** %32, align 8
  %34 = call i32 @git_annotated_commit_free(i32* %33)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_oid_fromstr(i32*, i32) #2

declare dso_local i32 @git_annotated_commit_lookup(i32**, i32, i32*) #2

declare dso_local i32 @git_merge(i32, i32**, i32, %struct.TYPE_7__*, %struct.TYPE_8__*) #2

declare dso_local i32 @git_annotated_commit_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
